--- a/pocok-catalog.yml
+++ b/pocok-catalog.yml
@@ -1,3 +1,3 @@
 pocok-example-hello-world:
-  file: /Users/iamfrntdv/Shiwa/pocok-example-hello-world/pocok.yaml
+  file: pocok.yaml
   git: https://github.com/shiwaforce/pocok-example-hello-world.git
